trunk/Archive2/5e/934f63e754ea82/output
main.cpp: In member function 'bound_function<R, Args>::operator alias<R (*)(Args ...)>()':
main.cpp:32:42: error: there are no arguments to 'memcpy' that depend on a template parameter, so a declaration of 'memcpy' must be available [-fpermissive]
         memcpy(data, bytes, sizeof(bytes));
                                          ^
main.cpp:32:42: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
